--- a/keilc51/Objects/1.build_log.htm
+++ b/keilc51/Objects/1.build_log.htm
@@ -24,7 +24,10 @@ Project File Date:  06/29/2016
 <h2>Output:</h2>
 Rebuild target 'Target 1'
 compiling main.c...
+main.c(34): warning C275: expression with possibly no effect
+main.c(81): warning C182: pointer to different objects
 compiling lib51.c...
+compiling LCD1602.c...
 linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_DELAYMS?LIB51
@@ -32,10 +35,10 @@ linking...
     SEGMENT: ?PR?_SENDSTRING?LIB51
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_SENDDATAS?LIB51
-Program Size: data=30.1 xdata=0 code=922
+Program Size: data=100.2 xdata=0 code=3415
 creating hex file from ".\Objects\1"...
-".\Objects\1" - 0 Error(s), 3 Warning(s).
-Build Time Elapsed:  00:00:02
+".\Objects\1" - 0 Error(s), 5 Warning(s).
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
